@@ -235,6 +235,7 @@
         "profile_links": "Show profile links to",
         "library_header": "Library (BETA)",
         "tag": "Tag",
+        "show_alternative_linux_icon": "Show alternative Linux icon",
         "showcomparelinks": "Show \"Compare\" links for achievements on friend activity feed",
         "hidetmsymbols": "Trademark and Copyright symbols in game titles",
         "metacritic": "Show Metacritic user scores",
